class Polygon {
  public id() {
    return -1;
  }
}

export default Polygon;
